oblig2patch/src/tests/oblig2/errors/type6_fail.cmp
program type6_fail
begin
    proc main()
    begin 
    in
       42.Foo := 42 /* error */
    end
end